# phosphor-logging

./: cper_diagnostics.cpp  cper_diagnostics.hpp  elog_entry.cpp  elog_entry.hpp  elog_serialize.cpp  meson.options
extensions/amd-event-log/: README.md  meson.build
extensions/amd-event-log/codegen/: README.md  generate_lut.py  generate_lut_tests.py
extensions/amd-event-log/data/: reverse_lut_default.json
extensions/amd-event-log/data/tools/: validate_lut.py
extensions/amd-event-log/src/: amd_ael_decoder.cpp  amd_ael_decoder.hpp  meson.build
extensions/amd-event-log/tools/: amd_event_log.cpp  generate_lut.py  generate_lut_tests.py  meson.build  reverse_lut_default.json
test/: cper_diagnostics_test.cpp  meson.build  serialization_test_json.cpp
test/amd-event-log/: meson.build
test/openpower-pels/: data_interface_test.cpp
